[tool.poetry]
name = "usburninator"
version = "0.1.0"
description = ""
authors = ["Alex Cline <rev.a.r.cline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.33.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
