[tool.poetry]
name = "usburninator"
version = "0.1.0"
description = "balena etcher-style tui for flashing os images to usb disks"
authors = ["Alex Cline <rev.a.r.cline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.33.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[tool.poetry.scripts]
usburninator = "usburninator.app:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
